--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -558,10 +558,6 @@ video {
   margin: 0.75rem;
 }
 
-.m-2 {
-  margin: 0.5rem;
-}
-
 .mx-20 {
   margin-left: 5rem;
   margin-right: 5rem;
@@ -572,6 +568,10 @@ video {
   margin-right: 1.5rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .mb-16 {
   margin-bottom: 4rem;
 }
@@ -580,16 +580,16 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mb-\[9px\] {
+  margin-bottom: 9px;
 }
 
 .mt-16 {
@@ -602,46 +602,6 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mb-\[\] {
-  margin-bottom: ;
-}
-
-.mb-\[10px\] {
-  margin-bottom: 10px;
-}
-
-.mb-\[px\] {
-  margin-bottom: px;
-}
-
-.mb-\[9px\] {
-  margin-bottom: 9px;
-}
-
-.mb-\[11px\] {
-  margin-bottom: 11px;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mt-9 {
@@ -676,36 +636,24 @@ video {
   height: 100%;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-\[73\%\] {
-  height: 73%;
+.h-\[60\%\] {
+  height: 60%;
 }
 
 .h-\[80\%\] {
   height: 80%;
 }
 
-.h-\[7\%\] {
-  height: 7%;
+.h-\[84\%\] {
+  height: 84%;
 }
 
-.h-\[85\%\] {
-  height: 85%;
+.h-auto {
+  height: auto;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-\[60\%\] {
-  height: 60%;
+.h-screen {
+  height: 100vh;
 }
 
 .w-10 {
@@ -764,24 +712,20 @@ video {
   justify-content: space-between;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .overflow-y-scroll {
@@ -808,6 +752,10 @@ video {
   border-width: 2px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
 .border-blue-700 {
   --tw-border-opacity: 1;
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
@@ -828,35 +776,17 @@ video {
   border-color: rgb(24 24 27 / var(--tw-border-opacity));
 }
 
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
 .bg-zinc-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#8c47af\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(140 71 175 / var(--tw-bg-opacity));
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .p-2 {
   padding: 0.5rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-2 {
@@ -902,16 +832,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -930,6 +850,16 @@ video {
 
 .font-thin {
   font-weight: 100;
+}
+
+.text-\[\#776be1\] {
+  --tw-text-opacity: 1;
+  color: rgb(119 107 225 / var(--tw-text-opacity));
+}
+
+.text-\[\#8c47af\] {
+  --tw-text-opacity: 1;
+  color: rgb(140 71 175 / var(--tw-text-opacity));
 }
 
 .text-blue-400 {
@@ -965,6 +895,11 @@ video {
 .text-green-700 {
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+
+.text-orange-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
 .text-orange-600 {
@@ -1017,30 +952,6 @@ video {
   color: rgb(202 138 4 / var(--tw-text-opacity));
 }
 
-.text-\[\#8c47af\] {
-  --tw-text-opacity: 1;
-  color: rgb(140 71 175 / var(--tw-text-opacity));
-}
-
-.text-\[\#8e6ecff\] {
-  color: #8e6ecff;
-}
-
-.text-\[\#e6ecff\] {
-  --tw-text-opacity: 1;
-  color: rgb(230 236 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#776be1\] {
-  --tw-text-opacity: 1;
-  color: rgb(119 107 225 / var(--tw-text-opacity));
-}
-
-.text-orange-400 {
-  --tw-text-opacity: 1;
-  color: rgb(251 146 60 / var(--tw-text-opacity));
-}
-
 .hover\:text-blue-500:hover {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -1060,12 +971,12 @@ video {
     display: none;
   }
 
-  .sm\:h-\[370px\] {
-    height: 370px;
-  }
-
   .sm\:h-3\/4 {
     height: 75%;
+  }
+
+  .sm\:h-\[370px\] {
+    height: 370px;
   }
 
   .sm\:w-\[300px\] {
@@ -1074,14 +985,6 @@ video {
 
   .sm\:w-auto {
     width: auto;
-  }
-
-  .sm\:w-1\/2 {
-    width: 50%;
-  }
-
-  .sm\:w-\[60\%\] {
-    width: 60%;
   }
 
   .sm\:grid-cols-4 {
@@ -1112,44 +1015,16 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:mt-16 {
-    margin-top: 4rem;
-  }
-
   .md\:mb-2 {
     margin-bottom: 0.5rem;
   }
 
-  .md\:h-3\/4 {
-    height: 75%;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
-  .md\:w-\[70\%\] {
-    width: 70%;
-  }
-
-  .md\:w-\[80\%\] {
-    width: 80%;
-  }
-
-  .md\:w-\[60\%\] {
-    width: 60%;
-  }
-
-  .md\:w-\[48\%\] {
-    width: 48%;
+  .md\:mt-16 {
+    margin-top: 4rem;
   }
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:flex-wrap {
-    flex-wrap: wrap;
   }
 
   .md\:gap-10 {
@@ -1161,29 +1036,9 @@ video {
     line-height: 2rem;
   }
 
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
   }
 }
 
@@ -1206,71 +1061,19 @@ video {
     margin-bottom: 0.25rem;
   }
 
-  .lg\:h-3\/4 {
-    height: 75%;
+  .lg\:w-\[60\%\] {
+    width: 60%;
   }
 
   .lg\:w-\[70\%\] {
     width: 70%;
   }
 
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
-  .lg\:w-\[\] {
-    width: ;
-  }
-
-  .lg\:w-\[60\%\] {
-    width: 60%;
-  }
-
-  .lg\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .lg\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
-  }
-
   .lg\:gap-8 {
     gap: 2rem;
   }
 
-  .lg\:text-left {
-    text-align: left;
-  }
-
   .lg\:text-\[20px\] {
     font-size: 20px;
-  }
-
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .xl\:w-\[70\%\] {
-    width: 70%;
-  }
-
-  .xl\:w-\[22\%\] {
-    width: 22%;
   }
 }
