--- a/public/stylesheets/loading.css
+++ b/public/stylesheets/loading.css
@@ -9,6 +9,15 @@ body {
     background-position: center;
 }
 
+#loading-screen {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
 .loading-container {
     position: relative;
     width: 80vw;
